# Project3

./: .gitignore  .main.py.swp  Dockerfile  check.sh  compose.yaml  main.py  pyproject.toml  readme.md
ui/: .styles.css.swp  check.sh  film.html  film.jsx  index.html  main.jsx  package-lock.json  package.json  styles.css  vite.config.js
